[package]
name = "jsonxf"
version = "0.5.0"
authors = ["pete gamache <pete@gamache.org>"]
description = "A fast JSON pretty-printer and minimizer."
homepage = "https://github.com/gamache/jsonxf"
repository = "https://github.com/gamache/jsonxf"
keywords = ["json", "pretty-print", "pretty", "minimize"]
categories = ["encoding", "rendering", "text-processing", "value-formatting"]
license = "MIT"
license-file = "MIT-LICENSE.txt"

[dependencies]
getopts = "0.2"

[lib]
name = "jsonxf"
path = "src/jsonxf.rs"

[[bin]]
name = "jsonxf"
path = "src/main.rs"
doc = false

